Bug 1921382 - Call ResetIPFamilyPreference after network change, r=necko-reviewers,valentin

The problem of this bug is that after network change, a connection entry that prefers IPv6 is always trying IPv6 address.
It's possible that after network change, IP preference is changed, so we should reset it after network change.

Differential Revision: https://phabricator.services.mozilla.com/D228940